[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-env"
version = "1.0.0"
description = "On-call SRE incident triage OpenEnv — production operations simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
    "openenv>=0.1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "env.tasks", "api", "graders", "server"]
